Spring Security issues fix remained